--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "laravel-echo": "^1.5.3",
+        "laravel-echo": "^1.6.1",
+        "pusher-js": "^5.1.1",
         "socket.io-client": "^2.2.0"
     }
 }
